[package]
name = "rust-detection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
show-image = { version = "0.8.5", features = ["image"] }
rosrust = "0.9.6"
rosrust_msg = "0.1"
anyhow = "1.0"
darknet = "0.3.2"
darknet-sys = "0.3"